# globalID2

./: .env.example  .gitignore  Makefile  QUICKSTART.md  README.md  auto_run.py  docker-compose.yml  full_migration_v2.py  main.py  pyproject.toml  requirements.txt  schema.sql  test_force_crawl.py
configs/: standard_diseases.csv
configs/cn/: disease_mapping.csv
configs/en/: disease_mapping.csv
configs/prompts/: analyst_system_prompt.txt  reviewer_system_prompt.txt  writer_system_prompt.txt
configs/sources/: cdc_diseases.csv  diseases_full_20260211.csv  icd10_diseases.csv
configs/us/: disease_mapping.csv
data/backups/: disease_mappings_CN_backup_20260214_175917.csv  disease_mappings_CN_backup_20260214_180138.csv  disease_mappings_CN_backup_20260214_180320.csv  disease_mappings_CN_backup_20260214_180837.csv  disease_mappings_CN_backup_20260214_230850.csv  disease_mappings_CN_backup_20260214_231358.csv  standard_diseases_backup_20260214_175917.csv  standard_diseases_backup_20260214_180138.csv  standard_diseases_backup_20260214_180320.csv  standard_diseases_backup_20260214_180837.csv  standard_diseases_backup_20260214_230850.csv  standard_diseases_backup_20260214_231358.csv
docker/: init-db.sql
docs/: AI_COLLABORATION_DESIGN.md  ARCHITECTURE_V2.md  DASHBOARD_GUIDE.md  DATABASE_DESIGN.md  DATABASE_QUICKSTART.md  DISEASE_DATA_COLLECTION.md  DISEASE_MANAGEMENT_STRATEGY.md  DISEASE_MAPPING_V2.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_PLAN.md  MIGRATION.md  PARSER.md  QUICK_FIX.md  README_OPTIMIZATION.md  REFACTORING_PLAN.md  START_HERE.md  database_design.md
examples/: README.md  quick_start.py
scripts/: REBUILD_MODES_GUIDE.md  cleanup_suggestions.py  clear_tasks.py  cn_data_quality_check.py  cn_merge_diseases_data.py  cn_missing_data_get.py  create_task_tables.py  create_task_tables_simple.py  disease_cli.py  full_rebuild_database.py  generate_english_mappings.py  generate_schema.py  reimport_history_data.py  seed_diseases.py
scripts/deprecated/: README.md  (+1 more)
src/: __init__.py
src/ai/: __init__.py  (+2 more)
tests/: quick_crawler_test.py  run_tests.sh  test_ai_report_simplified.py  test_crawlers.py  test_disease_mapper_db.py  test_health.py  test_integration.py  test_parser.py  test_task_management.py
(+234 files in other folders)
