[tool.poetry]
name = "globalid"
version = "2.0.0"
description = "GlobalID - Intelligent Global Disease Surveillance System"
authors = ["Likang Guo <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Core Web Framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"

# Database
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"

# Cache & Queue
redis = "^5.0.1"
celery = "^5.3.4"

# AI & ML
openai = "^1.10.0"
anthropic = "^0.18.0"
langchain = "^0.1.4"
langchain-openai = "^0.0.5"
tiktoken = "^0.5.2"

# Vector Search
qdrant-client = "^1.7.0"

# Data Processing
pandas = "^2.1.4"
numpy = "^1.26.3"
httpx = "^0.26.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
aiohttp = "^3.9.1"

# Visualization
plotly = "^5.18.0"
matplotlib = "^3.8.2"

# Utilities
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.7.0"
pyyaml = "^6.0.1"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^23.12.1"
ruff = "^0.1.11"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
ipython = "^8.19.0"

[tool.poetry.scripts]
globalid = "src.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
exclude = '''
/(
    \.git
  | \.venv
  | \.pytest_cache
  | __pycache__
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
exclude = [".venv", "__pycache__", "build", "dist"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"
